
3.5.5 to 3.6: (March xx, 2012)

  * Added support for 2600-daptor II device, including native support
    for 7800 controllers, BoosterGrip and Keypad controllers.  Special
    thanks go to Tom Hafner for a complimentary test sample of this
    device.

  * Added ability to dynamically swap the port order of Stelladaptor/
    2600-daptor devices with the 'Control-1' key combo.

  * Updated included PNG library to latest stable version.

-Have fun!


3.5 to 3.5.5: (February 4, 2012)

  * Due to changes in the debugger, old state files will not work with
    this release.

  * Fixed bug in sound restructuring introduced in the last release; in
    some cases, there could be some sound 'crackling' when starting a
    ROM after at least one ROM had already been loaded.

  * Several significant improvements to the debugger I/O tab:
      - added controller input widgets for many of the built-in
        controllers, allowing to control joysticks, paddles, etc
        from within the debugger.
      - added ability to modify the SWCHB/SWBCNT port B registers.
      - added ability to view TIA INPTx and VBLANK latch/dump bits.

  * Reworked 'mcontrol' argument, and added ability to map the mouse
    axes separately for paddles 0-3 or driving controllers 0-1.  In
    such modes, the left mouse button is tied to the x-axis, and the
    right button is tied to the y-axis.

  * Mouse 'specific-axis' mode is now saved per-ROM, meaning that each
    ROM can have separate settings.  For example, this allows one ROM to
    use paddles 0 and 1, while another can use paddles 0 and 2, etc.

  * The key-combo for switching the mouse between controller modes is now
    'Control-0' (Control-1,2,3 have been removed).  This switches
    between all possible modes for the current virtual controllers.

  * Fixed bug in 'Fixed Debug Colors' mode; under certain circumstances,
    playfield graphics could be coloured as being player graphics.
