@@ -31,7 +31,7 @@ Joystick::Joystick(Jack jack, const Event& event, const System& system)
     myDownEvent  = Event::JoystickZeroDown;
     myLeftEvent  = Event::JoystickZeroLeft;
     myRightEvent = Event::JoystickZeroRight;
-    myFireEvent  = Event::JoystickZeroFire1;
+    myFireEvent  = Event::JoystickZeroFire;
     myXAxisValue = Event::SALeftAxis0Value;
     myYAxisValue = Event::SALeftAxis1Value;
   }
@@ -41,7 +41,7 @@ Joystick::Joystick(Jack jack, const Event& event, const System& system)
     myDownEvent  = Event::JoystickOneDown;
     myLeftEvent  = Event::JoystickOneLeft;
     myRightEvent = Event::JoystickOneRight;
-    myFireEvent  = Event::JoystickOneFire1;
+    myFireEvent  = Event::JoystickOneFire;
     myXAxisValue = Event::SARightAxis0Value;
     myYAxisValue = Event::SARightAxis1Value;
   }
